--- a/starter/frontend/src/stylesheets/QuizView.css
+++ b/starter/frontend/src/stylesheets/QuizView.css
@@ -22,8 +22,8 @@
 .button {
     width: 100px;
     margin-top: 5px;
-    background-color: dodgerblue;
-    color: white;
+    background-color: black;
+    color: rgb(76, 167, 151);
     padding: 3px 5px;
     align-self: center;
 }
